--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.jar=${dist.dir}/OneAgainstAll.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mallet-deps.jar=lib/mallet-deps.jar
+file.reference.mallet.jar=lib/mallet.jar
 file.reference.weka-src.jar=lib/weka-src.jar
 file.reference.weka.jar=lib/weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.weka-src.jar}:\
-    ${file.reference.weka.jar}
+    ${file.reference.weka.jar}:\
+    ${file.reference.mallet-deps.jar}:\
+    ${file.reference.mallet.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,5 +79,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.weka.jar=lib/weka-src.jar!/src/main/java/
 src.dir=src
 test.src.dir=test
